test/functions/ferguson/error-return-parentclass.good
error-return-parentclass.chpl:14: In function 'f':
error-return-parentclass.chpl:15: error: Cannot initialize return value of type 'borrowed Child' from a 'borrowed Parent'
